ACLOCAL_AMFLAGS = -I m4

nodist_include_HEADERS = \
	acl-util.h \
	cgroup-util.h \
	conf-files.h \
	def.h \
	dev-setup.h \
	exit-status.h \
	hashmap.h \
	ioprio.h \
	label.h \
	libudev-hwdb-def.h \
	libudev-private.h \
	log.h \
	logind-acl.h \
	macro.h \
	Makefile.am \
	missing.h \
	mkdir.h \
	path-util.h \
	sd-daemon.h \
	sd-login.h \
	set.h \
	socket-util.h \
	sparse-endian.h \
	strbuf.h \
	strv.h \
	udev.h \
	util.h

dist_include_HEADERS = \
	libudev.h
